# pg2_sl_SOSE2017_old

./: .gitignore  CMakeLists.txt  README.md
blatt_01/: CMakeLists.txt
blatt_01/aufgabe_01/: CMakeLists.txt  Nodepad.cpp  Nodepad.h  blatt_01_aufgabe_01.cbp  main.cpp
blatt_01/aufgabe_02/: Book.cpp  Book.h  CMakeLists.txt  Nodepad.cpp  Nodepad.h  main.cpp
blatt_01/aufgabe_03/: CMakeLists.txt  main.cpp
blatt_01/aufgabe_03/libs/: Book.cpp  Book.h  Notepad.cpp  Notepad.h  Page.cpp  Page.h
blatt_02/: CMakeLists.txt
blatt_02/pixel-tetris/: CMakeLists.txt  main.cpp  main_test.cpp
blatt_02/pixel-tetris/libs/: Field.cpp  Field.h  Renderer.cpp  Renderer.h  Stone.cpp  Stone.h  XyPair.cpp  XyPair.h
blatt_02/pixel-tetris/test/: FieldTest.cpp  FieldTest.h  StoneTest.cpp  StoneTest.h
blatt_03/aufgabe_01/: CMakeLists.txt
